cmake_minimum_required(VERSION 3.29)
project(Project_22_1)

set(CMAKE_CXX_STANDARD 20)

add_executable(Project_23_1 main.cpp
        Creature.cpp
        Human.cpp
        Human.h
        Elf.cpp
        Elf.h
        Demon.cpp
        Cyberdemon.cpp
        Cyberdemon.h
        Balrog.cpp
        Balrog.h
        Creature.h
        Demon.h
)
